# mcp-intent-proxy

./: .gitignore  KICKOFF.md  LICENSE  README.md  pyproject.toml
docs/: decision-flow.md  design-notes.md
eval/: baselines.py  dataset.py  run_baselines.py  run_eval.py  run_flip.py  run_generalization.py
src/mcp_intent_proxy/: __init__.py  __main__.py  cache.py  classifier.py  logging.py  proxy.py  rules.py  taxonomy.py
tests/: test_ask_accept.py  test_classifier.py  test_enforcement.py  test_generalization.py  test_generalization_targeted.py  test_logging.py  test_passthrough.py  test_rules.py  upstream_stub.py
