[project]
name = "mcp-intent-proxy"
version = "0.1.0"
description = "Intent-based authorization proxy for MCP tool calls"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9",
    "anthropic>=0.40",
    "pyyaml>=6",
]

[project.scripts]
mcp-intent-proxy = "mcp_intent_proxy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_intent_proxy"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "sentence-transformers>=5.6.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
